[tool.poetry]
name = "just_asgi"
version = "0.0.1"
description = "Smallest and fast async python backend"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20.0.4"
uvicorn = "^0.11.6"
starlette = "^0.13.6"
orjson = "^3.1.0"
pydantic = "^1.6.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
